# OspreyMaster

./: CMakeLists.txt
proto/: annotation.proto  ingestion.proto
src/: client.cpp
